fixed funky dot position by logo on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -292,7 +292,7 @@ padding-right: 0px;
   width: 10px;
   height: 10px;
   margin-top: -30px;
-  margin-left: 75px;
+  margin-left: 95px;
 }
 .image-box {
   padding-top: 35px;
